# OpenSD2023_project

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: code.rst  conf.py  index.rst
examples/: basic_example.py
opensd_project/: __init__.py  __main__.py  core.py  visualize.py
tests/: test_basic.py
